--- a/src/css/mia-product.css
+++ b/src/css/mia-product.css
@@ -1,5 +1,7 @@
 /* 商品详情页样式 */
 
+/* common */
+
 /* inwrap */
 
 /* inwrap-text */
@@ -43,6 +45,7 @@
 	border: 1px solid #f4f4f4;
 }
 .detail .right{
+	position: relative;
 	float: left;
 	width: 600px;
 	padding-left: 50px;
@@ -139,15 +142,155 @@
 	height: 30px;
 	margin: -1px 0;
 }
+.detail .right .number dd{
+	float: left;
+	height: 28px;
+	border: 1px solid #b3b3b3;
+}
+.detail .right .number em,.reduce,.push{
+	float: left;
+	width: 24px;
+	height: 28px;
+}
+.detail .right .number span{
+	background: url(img/product-allicon.png) no-repeat;
+}
+.detail .right .number .reduce{
+	background-position: 0px -150px;
+}
+.detail .right .number .push{
+	background-position: -50px -150px;
+}
+.detail .right .number em{
+	width: 28px;
+	text-align: center;
+	line-height: 28px;
+	background-color: #fff;
+}
+.detail .right .add,.collect{
+	float: left;
+	position: relative;
+	height: 55px;
+	width: 225px;	
+	padding: 2px 12px 5px 0;
+	font-size: 18px;
+}
+.detail .right .add a{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	color: #fff;	
+	line-height: 55px;
+	text-align: center;
+	background-color: #F450A2;
+	border-radius: 2px;
+}
+.detail .right .collect a{
+	display: inline-block;
+	height: 55px;
+	border: 1px solid #e2e2e2;
+	font-size: 14px;
+	font-family: 微软雅黑;
+	color: #666;
+}
+.detail .right .love{
+	display: block;
+	width: 100px;
+	height: 18px;
+	margin-top: 8px;
+	background: url(img/product-loveicon.png) no-repeat center center;
+	text-align: center;
+}
+.detail .right .collect span{
+	position: absolute;
+	bottom: 10px;
+	left: 38px;
+}
+.detail .right .code{
+	padding: 3px 0 5px;
+	overflow: hidden;
+}
+.detail .right .code dt{
+	padding: 0;
+	margin: 0;
+	width: 46px;
+	font-size: 12px;
+	text-align: left;
+	line-height: 25px;
+}
+.detail .right .code dd{
+	float: left;
+	height: 25px;
+	line-height: 25px;
+	text-align: right;
+	font-size: 12px;
+    color: gray;
+}
+.detail .right .fahuo,.detail .right .tips{
+	color: #999;
+	font-family: "微软雅黑";
+}
+.detail .right .tips{
+	margin: 10px 0;
+}
+.detail .right .tips li{
+	float: left;
+	background: url(img/li-point.png) no-repeat 0 center;
+	padding-left: 10px;
+	margin-right: 15px;
+}
 
+/* inwrap-content share */
+.inwrap-content .share{
+	position: absolute;
+	top: 10px;
+	right: 0;
+	height: 20px;
+	line-height: 20px;
+}
+.share a{
+	float: left;
+	background-image: url(img/list-shareico.png);
+	width: 20px;
+	height: 20px;
+	margin-right: 5px;
+}
+.share .weixin{
+	background-position: -180px 0;
+}
+.share .sina{
+	background-position: 0 0;
+}
 
-
-
-
-
-
-
-
+/* inwrap-content more */
+.inwrap-content .more{
+	background: url(img/product-more-bg.png) repeat-x #fff;
+	overflow: hidden;
+	margin: 0;
+	padding: 38px 0 12px;
+}
+.more .cell{
+	float: left;
+	width: 155px;
+	position: relative;
+	margin: 0 0 0 10px;
+}
+.more .cell img{
+	width: 155px;
+    height: 155px;
+    vertical-align: top;
+    border: 1px solid #ebebeb;
+    margin-bottom: 6px;
+}
+.more .cell .p1{
+	color: #666;
+	line-height: 18px;
+	margin-bottom: 4px;
+}
+.more .cell .p2{
+	color: #f34fa1;
+	line-height: 18px;
+}
 
 
 
